Feat: Display score on screen:
- add disabled input form to index.html
- target and update form in player update fucntion in app.js
- style in style.css

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,14 @@
 body {
     text-align: center;
 }
+
+#score {
+    position:absolute;
+    top:0;
+    margin-top: 40px;
+    border:none;
+}
+
+#scoretext {
+    top:0;
+}
