Add death counter:
- add disabled input form to index.html
- target and update form in player update fucntion in app.js
- style in style.css

--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,21 @@ body {
     text-align: center;
 }
 
-#score {
+#scoretext {
     position:absolute;
     top:0;
     margin-top: 40px;
+
+}
+
+#deathstext {
+    position:absolute;
+    top:0;
+    margin-top: 80px;
     border:none;
 }
 
-#scoretext {
-    top:0;
+#score, #deaths {
+    border:none;
 }
+
